# haskue

./: .gitignore  CHANGELOG.md  README.md  build.sh  cabal.project.debug  cabal.project.release  debug.sh  fourmolu.yaml  haskue.cabal
.github/workflows/: ci.yml  haskell.yml  release.yaml
app/: Main.hs
src/: AST.hs  Class.hs  Common.hs  Config.hs  Cursor.hs  DepGraph.hs  Env.hs  Error.hs  Eval.hs  EvalExpr.hs  EvalVal.hs  Exception.hs  Feature.hs  FuncCall.hs  MutEnv.hs  Mutate.hs  NotifGraph.hs  Parser.hs  Path.hs  PostReduce.hs  PropGraph.hs  Reduce.hs  Reduction.hs  Ref.hs  STree.hs  Store.hs  StringIndex.hs  TCOps.hs  TCursorOps.hs  TMonad.hs  Transform.hs  Tree.hs  Unify.hs  Util.hs  Value.hs
src/Reduce/: Builtin.hs  Common.hs  Comprehension.hs  Core.hs  Core.hs-boot  Disjunction.hs  Finalize.hs  Monad.hs  Mutate.hs  Nodes.hs  Nodes.hs-boot  Notif.hs  Op.hs  PostReduce.hs  Primitives.hs  RMonad.hs  ReCalc.hs  Recalc.hs  RefSys.hs  Reference.hs  RegOps.hs  Root.hs  Root.hs-boot  Store.hs  Struct.hs  TraceSpan.hs  Unification.hs  UnifyOp.hs
src/Reduce/Stdlib/: List.hs  Strings.hs
src/Semant/: Resolver.hs  Semant.hs
src/Syntax/: AST.hs  Parser.hs  Scanner.hs  Token.hs
src/Util/: Format.hs  ShowTrace.hs  Trace.hs
src/Value/: Atom.hs  Block.hs  Bottom.hs  Bounds.hs  Class.hs  Comprehension.hs  Constraint.hs  Cursor.hs  Cycle.hs  Disj.hs  DisjoinOp.hs  Env.hs  Fix.hs  Func.hs  Instances.hs  Interpolation.hs  List.hs  Mutable.hs  Op.hs  Reference.hs  Struct.hs  TMonad.hs  Tree.hs  Tree.hs-boot  TreeNode.hs  UnifyOp.hs  Util.hs  Val.hs  Val.hs-boot
src/Value/Export/: AST.hs  AST.hs-boot  Debug.hs  JSON.hs
src/Value/Util/: BuildASTExpr.hs  BuildASTExpr.hs-boot  TreeRep.hs  ValRep.hs
tests/: E2E.hs  EvalTest.hs  EvalTest.hs.bk  FuncBenchMain.hs  Main.hs  MemBenchMain.hs  NotifGraphTest.hs  PropGraphTest.hs  ScannerTest.hs  Spec.hs  SpecBenchMain.hs  SpecTest.hs  TransformTest.hs  TreeTest.hs  TreeTest.hs.bk  ValueTest.hs  binop.cue  disjunct.cue  struct.cue  test2.cue
tests/bench_spec/: large1.cue  large2.cue  mid1.cue
tests/bkup/: cycles_sc1.txtar  cycles_sc2.txtar  cycles_sc3.txtar  cycles_sc4.txtar  cycles_sc6.txtar  cycles_sc_err1.txtar  cycles_sc_err1_1.txtar  cycles_sc_err2.txtar  cycles_sc_err3_2.txtar
tests/e2efiles/: basic.cue  binop.cue  bottom.cue  disjunct.cue  disjunct2.cue  unaryop.cue  unify_structs.cue  vars.cue  vars2.cue  vars3.cue
tests/large_spec/: large1.cue  mid1.cue
tests/spec/: basic.cue  basic.txtar  binop.cue  binop.txtar  binop2.cue  binop2.txtar  binop3.cue  binop3.txtar  binop_arith.txtar  binop_cmp.txtar  binop_cmp_eq.cue  binop_cmp_eq.txtar  binop_cmp_ne.cue  binop_cmp_ne.txtar  bottom.cue  bottom.txtar  bound1.cue  bounds.txtar  bounds1.cue  bounds1.txtar  bounds2.cue  bounds2.txtar  builtins.txtar  bytes.txtar  close.txtar  close1.cue  close1.txtar  close2.cue  close2.txtar  close3.cue  close3.txtar  close_err.txtar  close_err1.txtar  close_err2.txtar  close_err3.txtar  close_incmpl1.txtar  cnstr.txtar  cnstr1.cue  cnstr1.txtar  cnstr2.cue  (+271 more)
tests/transform/: transform.cue
tools/extrtxtar/: go.mod  main.go
tools/fileserv/: main.go
tools/logp/: go.mod  main.go
tools/tracep/: main.go
