cabal-version:      3.0
name:               haskue
version:            0.1.0.0
synopsis:           A Haskell implementation of the CUE configuration language.
description:        Please see the README on GitHub.

bug-reports:        https://github.com/jzhonx/haskue/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Junxiang Zhou
maintainer:         junzhou365@gmail.com

category:           Development
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        AST,
        Common,
        Cursor,
        Eval,
        EvalExpr,
        Exception,
        MutEnv,
        Parser,
        Path,
        Reduce,
        Reduce.Mutate,
        Reduce.PostReduce,
        Reduce.RMonad,
        Reduce.RefSys,
        Reduce.RegOps,
        Reduce.Root,
        Reduce.UnifyOp,
        TCursorOps,
        Util,
        Value.Atom,
        Value.Bottom,
        Value.Bounds,
        Value.Comprehension,
        Value.Constraint,
        Value.Cycle,
        Value.Disj,
        Value.List,
        Value.Mutable,
        Value.Reference,
        Value.Struct,
        Value.Tree,
        Value.TreeNode,

    other-modules:
      Paths_haskue
    ghc-options: -Wall -Wpartial-fields
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.17.0.0,
      bytestring >= 0.11.5 && < 0.12,
      containers >= 0.6.7 && < 0.7,
      monad-logger >= 0.3.40 && < 0.4,
      mtl >= 2.2.2 && < 2.3,
      transformers >= 0.5.6 && < 0.6,
      text >= 2.0.2 && < 2.1,
      parsec >= 3.1.16 && < 3.2,
      optparse-applicative >= 0.18.1 && < 0.19,
      aeson,

    hs-source-dirs:   src
    default-language: Haskell2010

executable haskue
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        haskue,
        mtl,
        bytestring,
        optparse-applicative,

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite haskue-unit-test
  type: exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is: Main.hs
  other-modules:
    SpecTest,
    -- TreeTest,
  build-depends:
        base ^>=4.17.0.0,
        tasty >= 0.7,
        tasty-hunit,
        haskue,
        bytestring,
        mtl,
        containers,
        transformers,
        monad-logger,
        directory,
  default-language: Haskell2010
