cabal-version:      3.0
name:               haskue
version:            0.1.0.0
synopsis:           A Haskell implementation of the CUE configuration language.
description:        Please see the README on GitHub.

bug-reports:        https://github.com/jzhonx/haskue/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Junxiang Zhou
maintainer:         junzhou365@gmail.com

category:           Development
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        AST,
        Cursor,
        Env,
        Eval,
        EvalExpr,
        Exception,
        Feature,
        Parser,
        PropGraph,
        Reduce,
        Reduce.Nodes,
        Reduce.PostReduce,
        Reduce.RMonad,
        Reduce.Recalc,
        Reduce.RefSys,
        Reduce.RegOps,
        Reduce.Root,
        Reduce.UnifyOp,
        StringIndex,
        Util,
        Value,
        Value.Atom,
        Value.Bottom,
        Value.Bounds,
        Value.Comprehension,
        Value.Constraint,
        Value.Disj,
        Value.DisjoinOp,
        Value.Fix,
        Value.Interpolation,
        Value.List,
        Value.Reference,
        Value.Struct,
        Value.Tree,
        Value.Op,
        Value.UnifyOp,
        Value.Util.BuildASTExpr,
        Value.Util.TreeRep,
        Value.Instances,

    other-modules:
      Paths_haskue
    ghc-options: -Wall -Wpartial-fields -O0 -ddump-simpl -ddump-to-file -dsuppress-coercions
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
      BlockArguments,
      DuplicateRecordFields,
      FlexibleContexts,
      FlexibleInstances,
      InstanceSigs,
      LambdaCase,
      MultiWayIf,
      NamedFieldPuns,
      OverloadedRecordDot,
      OverloadedStrings,
      RecordWildCards,
      ScopedTypeVariables,

    build-depends:    
      base,
      bytestring >= 0.11.5 && < 0.12,
      containers >= 0.6.7 && < 0.7,
      mtl >= 2.3.1,
      transformers,
      text >= 2.0.2 && < 2.1,
      parsec >= 3.1.16 && < 3.2,
      optparse-applicative >= 0.18.1 && < 0.19,
      aeson,
      time,
      vector,
      split,
      unordered-containers,
      deepseq,
      hashable,

    hs-source-dirs:   src
    default-language: Haskell2010

executable haskue
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        haskue,
        mtl,
        bytestring,
        optparse-applicative,

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -Wpartial-fields -O0 -ddump-simpl -ddump-to-file -dsuppress-coercions

Test-Suite haskue-unit-test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    SpecTest,
    PropGraphTest,
    TreeTest,
  build-depends:
        base,
        tasty >= 0.7,
        tasty-hunit,
        haskue,
        bytestring,
        mtl,
        containers,
        transformers,
        directory,
        text,
        aeson,
  default-language: Haskell2010
  ghc-options: -Wall -Wpartial-fields -O0



benchmark time
  type: exitcode-stdio-1.0
  main-is: FuncBenchMain.hs
  hs-source-dirs: tests
  ghc-options: -O2 -fprof-late -rtsopts
  build-depends:
      base,
      criterion,
      containers >= 0.6.7 && < 0.7,
      haskue,
      vector,
      deepseq,
      mtl,
      text,
     
  default-language: Haskell2010


benchmark memory
  type: exitcode-stdio-1.0
  main-is: MemBenchMain.hs
  hs-source-dirs: tests
  ghc-options: -fprof-late -rtsopts
  build-depends:
      base,
      weigh,
      containers >= 0.6.7 && < 0.7,
      haskue,
      vector,
     
  default-language: Haskell2010

benchmark spec
  type: exitcode-stdio-1.0
  main-is: SpecBenchMain.hs
  hs-source-dirs: tests
  ghc-options: -O2 -fprof-late -rtsopts -fspecialise-aggressively
  build-depends:
      base,
      criterion,
      containers >= 0.6.7 && < 0.7,
      haskue,
      vector,
      deepseq,
      mtl,
      bytestring,
     
  default-language: Haskell2010
